force-app/main/default/objects/Cloudrop__Unsubscribe_Group__c/Cloudrop__Unsubscribe_Group__c.object-meta.xml
<CustomObject>
    <label>MassMailer Unsubscribe Group</label>
    <nameField>
        <label>Unsubscribe Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MassMailer Unsubscribe Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>