force-app/main/default/objects/Cloudrop__Unsubscribe_Group__c/fields/Cloudrop__Description__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>