force-app/main/default/objects/Cloudrop__Unsubscribe_Group__c/fields/Cloudrop__Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Group_Id__c</fullName>
    <externalId>true</externalId>
    <label>Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>