force-app/main/default/objects/Cloudrop__Unsubscribe_Group__c/fields/Cloudrop__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>