force-app/main/default/objects/Cloudrop__Unsubscribe_Group__c/fields/Cloudrop__Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Logo_URL__c</fullName>
    <label>Logo URL</label>
    <type>Url</type>
</CustomField>