force-app/main/default/objects/Cloudrop__Unsubscribe_Group__c/fields/Cloudrop__MassMailer_Email_Preferences_Group__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__MassMailer_Email_Preferences_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MassMailer Email Preferences Group</label>
    <referenceTo>Cloudrop__MassMailer_Email_Preferences_Group__c</referenceTo>
    <relationshipLabel>MassMailer Unsubscribe Groups</relationshipLabel>
    <relationshipName>MassMailer_Unsubscribe_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>