force-app/main/default/objects/Cloudrop__Unsubscribe_Group__c/fields/Cloudrop__URL__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>